<resources>
    <string name="app_name" translatable="false">Peregrin</string>
    <string name="enter">Enter</string>
    <string name="passwords_are_not_equals">Passwords are not equals!</string>
    <string name="network_error">Network error</string>
    <string name="user_with_this_phone_was_registered">User with this phone number was registered</string>
    <string name="registration">Registration</string>
    <string name="phone_number">Phone number</string>
    <string name="nickname">Name</string>
    <string name="password">Password</string>
    <string name="repeat_password">Accept password</string>
    <string name="register">Register</string>
    <string name="wrong_password">Wrong password or login</string>
    <string name="you_are_not_authorisation">You are not authorisation. Please, register or enter to your accaunt to use all application functional.</string>
    <string name="interlocutor_phone">Interlocutor phone</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="log_out">Log out</string>
    <string name="too_short_password">Your password is too short</string>
    <string name="incorrect_phone_number">Incorrect phone number</string>
    <string name="fill_in_all_fields">Fill in all fields</string>
    <string name="not_found_user_with_this_phone">User with this phone is not registered</string>
    <string name="already_added">User already added</string>
    <string name="wait">Wait...</string>
</resources>
